[build-system]
requires = ["setuptools>=71.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voipms-api"
version = "1.0.0b10"
authors = [{ name = "Jose Pineda", email = "hello@joseanmont.com" }]
description = "A python package to simplify the use of the VoIP.ms API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.32.3"]


[project.urls]
Homepage = "https://github.com/joseanmont/voipms-api"
Issues = "https://github.com/joseanmont/voipms-api/issues"
